--- a/gradle.properties
+++ b/gradle.properties
@@ -34,11 +34,11 @@ mapping_version=1.20.1
 # Must match the String constant located in the main mod class annotated with @Mod.
 mod_id=ix_api
 # The human-readable display name for the mod.
-mod_name=IXAPI
+mod_name=IXApi
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=GPL License
 # The mod version. See https://semver.org/
-mod_version=1.0.4
+mod_version=1.0.5
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
