--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,17 @@ base {
 
 java {
     toolchain.languageVersion = JavaLanguageVersion.of(17)
+    //withSourcesJar()
 }
+
+/tasks.configureEach { task ->
+    if (task.name == 'reobf') {
+        task.enabled = false
+    }
+    if (task.name.startsWith('reobf')) {
+        task.enabled = false
+    }
+}/
 
 minecraft {
     // The mappings can be changed at any time and must be in the following format.
