--- a/gradle.properties
+++ b/gradle.properties
@@ -36,9 +36,9 @@ mod_id=ix_api
 # The human-readable display name for the mod.
 mod_name=IXApi
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
-mod_license=GPL License
+mod_license=GPLv2
 # The mod version. See https://semver.org/
-mod_version=1.0.6-pre1
+mod_version=1.0.7-pre1
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
